images hebergements et activites en %

--- a/Booki1.html
+++ b/Booki1.html
@@ -90,10 +90,10 @@
         <section class="bloc-hebergements"> 
             <h2>Hébergements à Marseille</h1>
             <div class="articles">  
-                <article class="carte-hebergements">
+                <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image">
-                            <img src="Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo Auberge La cannebière" width="163.7px" height="77px"/>
+                        <div class="carte-image-marseille">
+                            <img src="Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo Auberge La cannebière"/>
                         </div>
                         <div class="carte-nom-marseille">
                             <h4>Auberge La Cannebière</h4>
@@ -108,10 +108,10 @@
                         </div>
                     </a>
                 </article>
-                <article class="carte-hebergements">
+                <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image">
-                            <img src="Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo Hôtel du port" width="163.7px" height="77px"/>
+                        <div class="carte-image-marseille">
+                            <img src="Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo Hôtel du port"/>
                         </div>
                         <div class="carte-nom-marseille">
                             <h4>Hôtel du port</h4>
@@ -126,10 +126,10 @@
                         </div>
                     </a>
                 </article>
-                <article class="carte-hebergements">
+                <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image">
-                            <img src="Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo Hôtel Les mouettes" width="163.7px" height="77px"/>
+                        <div class="carte-image-marseille">
+                            <img src="Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo Hôtel Les mouettes"/>
                         </div>
                         <div class="carte-nom-marseille">
                             <h4>Hôtel Les mouettes</h4>
@@ -144,10 +144,10 @@
                         </div>
                     </a>
                 </article>
-                <article class="carte-hebergements">
+                <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image">
-                            <img src="Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo Hôtel de la mer" width="163.7px" height="77px"/>
+                        <div class="carte-image-marseille">
+                            <img src="Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo Hôtel de la mer"/>
                         </div>
                         <div class="carte-nom-marseille">
                             <h4>Hôtel de la mer</h4>
@@ -162,10 +162,10 @@
                         </div>
                     </a>
                 </article>
-                <article class="carte-hebergements">
+                <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image">
-                            <img src="Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo Auberge Le Panier"  width="163.7px" height="77px"/>
+                        <div class="carte-image-marseille">
+                            <img src="Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo Auberge Le Panier"/>
                         </div>
                         <div class="carte-nom-marseille">
                             <h4>Auberge Le Panier</h4>
@@ -180,10 +180,10 @@
                         </div>  
                     </a>
                 </article>
-                <article class="carte-hebergements">
+                <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image">
-                            <img src="Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo Hôtel chez Amina" width="163.7px" height="77px"/>
+                        <div class="carte-image-marseille">
+                            <img src="Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo Hôtel chez Amina"/>
                         </div>
                         <div class="carte-nom-marseille">
                             <h4>Hôtel Chez Amina</h4>
@@ -209,10 +209,12 @@
             </div>
             <article class="carte-hebergements-populaires">
                 <a href="#">
-                    <img src="Images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo Hôtel Le soleil du matin" width="86.7px" height="91.5px"/>
-                    <div class="carte-nom-populaires">    
-                        <h4>Hôtel Le Soleil du matin</h4>
-                        <p>Nuit à partir de 128<span>€</span></p>
+                    <img src="Images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo Hôtel Le soleil du matin"/>
+                    <div class="carte-texte-populaires">
+                        <div class="carte-nom-populaires">    
+                            <h4>Hôtel Le Soleil du matin</h4>
+                            <p>Nuit à partir de 128<span>€</span></p>
+                        </div>
                         <div class="carte-star-rating"> 
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
@@ -225,10 +227,12 @@
             </article>
             <article class="carte-hebergements-populaires">
                 <a href="#">
-                    <img src="Images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo Chambres d'hôtes Au coeur de l'eau" width="86.7px" height="91.5px"/>
-                    <div class="carte-nom-populaires">  
-                        <h4>Hôtel Au coeur de l'eau Chambres d'hôtes</h4>
-                        <p>Nuit à partir de 71<span>€</span></p>
+                    <img src="Images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo Chambres d'hôtes Au coeur de l'eau"/>
+                    <div class="carte-texte-populaires">
+                        <div class="carte-nom-populaires">
+                            <h4>Hôtel Au coeur de l'eau Chambres d'hôtes</h4>
+                            <p>Nuit à partir de 71<span>€</span></p>
+                        </div>
                         <div class="carte-star-rating"> 
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
@@ -241,10 +245,12 @@
             </article>
             <article class="carte-hebergements-populaires">
                 <a href="#">
-                <img src="Images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc" width="86.7px" height="91.5px"/>
-                    <div class="carte-nom-populaires">  
-                        <h4>Hôtel tout bleu et Blanc</h4>
-                        <p>Nuit à partir de 68<span>€</span></p>
+                    <img src="Images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc"/>
+                    <div class="carte-texte-populaires">
+                        <div class="carte-nom-populaires">  
+                            <h4>Hôtel tout bleu et Blanc</h4>
+                            <p>Nuit à partir de 68<span>€</span></p>
+                            </div>
                         <div class="carte-star-rating"> 
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
