--- a/Booki1.html
+++ b/Booki1.html
@@ -2,22 +2,16 @@
 <html lang="fr">
     
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="Images/logo/Booki.png"/>
+    <link rel="icon" href="Images/logo/Booki.png">
     <title>Booki Trouvez votre hébergement pour des vacances de rêve</title>
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--Optimiser le chargement des polices preconnect et DNS Prefetch
-    <link rel="dns-prefetch" href="//fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://free.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />-->
     <script src="https://kit.fontawesome.com/8f9725c6e5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/stylesBooki2.css"/>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/stylesBooki2.css">
 </head>
 
 <body>
@@ -26,7 +20,7 @@
  <!--NAVIGATION-->
     <header>
 	    <div class="logo">
-            <img src="Images/logo/Booki.png" alt="logo Booki"/>
+            <img src="Images/logo/Booki.png" alt="logo Booki">
         </div>
         <nav>
             <ul>
@@ -48,8 +42,8 @@
                 <i class="fa fa-map-marker-alt fa-lg"></i>
             </div>
             <div class="selection">
-                <form method="" action="#">
-                <input class="selection" type="text" name="recherche" id="recherche" placeholder="Marseille, France"/>
+                <form method="post" action="#">
+                <input class="selection" type="text" name="recherche" id="recherche" placeholder="Marseille, France">
                 </form><!--color="black" weight-font="bold" font-size="small" size="30" maxlength="30" -->
             </div>
             <button class="bouton">
@@ -61,19 +55,19 @@
         <section class="filtres">
             <h3>Filtres</h3>
             <div class="filtre-box">
-                <span class="filtre-icone"><i class="fa-solid fa-money-bill-wave"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-money-bill-wave fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Économique</a></span>
             </div>
             <div class="filtre-box"> 
-                <span class="filtre-icone"><i class="fa-solid fa-child-reaching"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-child-reaching fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Familial</a></span>
                 </div>
             <div class="filtre-box">   
-                <span class="filtre-icone"><i class="fa-solid fa-heart"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-heart fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Romantique</a></span>
             </div>
             <div class="filtre-box">   
-                <span class="filtre-icone"><i class="fa-solid fa-dog"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-dog fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Animaux autorisés</a></span>
             </div>                         
         </section>
@@ -88,13 +82,11 @@
     <div id="conteneur-hebergements-populaires">
        
         <section class="bloc-hebergements"> 
-            <h2>Hébergements à Marseille</h1>
+            <h2>Hébergements à Marseille</h2>
             <div class="articles">  
                 <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image-marseille">
-                            <img src="Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo Auberge La cannebière"/>
-                        </div>
+                        <img src="Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo Auberge La cannebière">
                         <div class="carte-nom-marseille">
                             <h4>Auberge La Cannebière</h4>
                             <p>Nuit à partir de <span>25€</span></p>
@@ -103,16 +95,14 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <span><i class="fa-solid fa-star fa-2xs"></i></span></i>
+                                <span><i class="fa-solid fa-star fa-2xs"></i></span>
                             </div>
                         </div>
                     </a>
                 </article>
                 <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image-marseille">
-                            <img src="Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo Hôtel du port"/>
-                        </div>
+                        <img src="Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo Hôtel du port">
                         <div class="carte-nom-marseille">
                             <h4>Hôtel du port</h4>
                             <p>Nuit à partir de 52<span>€</span></p>
@@ -128,9 +118,7 @@
                 </article>
                 <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image-marseille">
-                            <img src="Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo Hôtel Les mouettes"/>
-                        </div>
+                        <img src="Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo Hôtel Les mouettes">
                         <div class="carte-nom-marseille">
                             <h4>Hôtel Les mouettes</h4>
                             <p>Nuit à partir de 76<span>€</span></p>
@@ -146,9 +134,7 @@
                 </article>
                 <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image-marseille">
-                            <img src="Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo Hôtel de la mer"/>
-                        </div>
+                        <img src="Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo Hôtel de la mer">
                         <div class="carte-nom-marseille">
                             <h4>Hôtel de la mer</h4>
                             <p>Nuit à partir de 46<span>€</span></p>
@@ -164,9 +150,7 @@
                 </article>
                 <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image-marseille">
-                            <img src="Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo Auberge Le Panier"/>
-                        </div>
+                        <img src="Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo Auberge Le Panier">
                         <div class="carte-nom-marseille">
                             <h4>Auberge Le Panier</h4>
                             <p>Nuit à partir de <span>23€</span></p>
@@ -182,9 +166,7 @@
                 </article>
                 <article class="carte-hebergements-marseille">
                     <a href="#">
-                        <div class="carte-image-marseille">
-                            <img src="Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo Hôtel chez Amina"/>
-                        </div>
+                        <img src="Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo Hôtel chez Amina">
                         <div class="carte-nom-marseille">
                             <h4>Hôtel Chez Amina</h4>
                             <p>Nuit à partir de 96<span>€</span></p>
@@ -209,7 +191,7 @@
             </div>
             <article class="carte-hebergements-populaires">
                 <a href="#">
-                    <img src="Images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo Hôtel Le soleil du matin"/>
+                    <img src="Images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo Hôtel Le soleil du matin">
                     <div class="carte-texte-populaires">
                         <div class="carte-nom-populaires">    
                             <h4>Hôtel Le Soleil du matin</h4>
@@ -227,7 +209,7 @@
             </article>
             <article class="carte-hebergements-populaires">
                 <a href="#">
-                    <img src="Images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo Chambres d'hôtes Au coeur de l'eau"/>
+                    <img src="Images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo Chambres d'hôtes Au coeur de l'eau">
                     <div class="carte-texte-populaires">
                         <div class="carte-nom-populaires">
                             <h4>Hôtel Au coeur de l'eau Chambres d'hôtes</h4>
@@ -245,7 +227,7 @@
             </article>
             <article class="carte-hebergements-populaires">
                 <a href="#">
-                    <img src="Images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc"/>
+                    <img src="Images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc">
                     <div class="carte-texte-populaires">
                         <div class="carte-nom-populaires">  
                             <h4>Hôtel tout bleu et Blanc</h4>
@@ -271,7 +253,7 @@
             <div class="activites-une">
                 <article class="carte-activites">
                     <a href="#">
-                        <img src="Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo du vieux Port"/>
+                        <img src="Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo du vieux Port">
                         <h4>Vieux Port</h4>
                     </a>
                 </article>
@@ -279,13 +261,13 @@
             <div class="activites-deux">
                 <article class="carte-activites">
                     <a href="#">
-                        <img src="Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo du fort de Pomègue"/>
+                        <img src="Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo du fort de Pomègue">
                         <h4>Fort de Pomègue</h4>
                     </a>
                 </article>
                 <article class="carte-activites">
                     <a href="#">             
-                        <img src="Images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo des Îles du Frioul"/>
+                        <img src="Images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo des Îles du Frioul">
                         <h4>Îles du Frioul</h4>
                     </a>
                 </article>
@@ -293,7 +275,7 @@
             <div class="activites-une">
                 <article class="carte-activites">
                     <a href="#">
-                        <img src="Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo du Parc National des Calanqes"/>
+                        <img src="Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo du Parc National des Calanqes">
                         <h4>Parc National des Calanques</h4>
                     </a>
                 </article>
@@ -301,13 +283,13 @@
             <div class="activites-deux">
                 <article class="carte-activites">
                     <a href="#">
-                        <img src="Images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo de Notre-Dame-de-la-Garde"/>
+                        <img src="Images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo de Notre-Dame-de-la-Garde">
                         <h4>Notre-Dame-de-la-Garde</h4>
                     </a>
                 </article>
                 <article class="carte-activites">
                     <a href="#">
-                        <img src="Images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo du Parc Longchamp"/>
+                        <img src="Images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo du Parc Longchamp">
                         <h4>Parc Longchamp</h4>
                     </a>
                 </article>
