--- a/Booki1.html
+++ b/Booki1.html
@@ -41,10 +41,10 @@
             <div class="localisation">
                 <i class="fa fa-map-marker-alt fa-lg"></i>
             </div>
-            <div class="selection">
+            <div class="selectionMarseille">
                 <form method="post" action="#">
                 <input class="selection" type="text" name="recherche" id="recherche" placeholder="Marseille, France">
-                </form><!--color="black" weight-font="bold" font-size="small" size="30" maxlength="30" -->
+                </form> <!--color="black" weight-font="bold" font-size="small" size="30" maxlength="30" -->
             </div>
             <button class="bouton">
                 <span class="bouton-texte">Rechercher</span>
@@ -73,7 +73,7 @@
         </section>
         
         <div class="circle-info">
-            <i class="fa-solid fa-info"></i>
+            <i class="fa-solid fa-info fa-2xs"></i>
             Plus de 500 logements sont disponibles dans cette ville
         </div>
     </div>
@@ -185,7 +185,7 @@
         </section>
         
         <section class="bloc-populaires">
-            <div class="titre-populaire">
+            <div class="titre-populaires">
                 <h2>Les plus populaires</h2>
                 <i class="fa-solid fa-star"></i>
             </div>
@@ -250,44 +250,44 @@
     <div id="conteneur-activites">
         <h2>Activités à Marseille</h2>
         <div class ="articles-activites">
-            <div class="activites-une">
-                <article class="carte-activites">
+            <div class="colonne-une">
+                <article class="carte-grande">
                     <a href="#">
                         <img src="Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo du vieux Port">
                         <h4>Vieux Port</h4>
                     </a>
                 </article>
             </div>
-            <div class="activites-deux">
-                <article class="carte-activites">
+            <div class="colonne-deux">
+                <article class="carte-moyenne">
                     <a href="#">
                         <img src="Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo du fort de Pomègue">
                         <h4>Fort de Pomègue</h4>
                     </a>
                 </article>
-                <article class="carte-activites">
+                <article class="carte-petite">
                     <a href="#">             
                         <img src="Images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo des Îles du Frioul">
                         <h4>Îles du Frioul</h4>
                     </a>
                 </article>
             </div>
-            <div class="activites-une">
-                <article class="carte-activites">
+            <div class="colonne-une">
+                <article class="carte-grande">
                     <a href="#">
                         <img src="Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo du Parc National des Calanqes">
                         <h4>Parc National des Calanques</h4>
                     </a>
                 </article>
             </div>
-            <div class="activites-deux">
-                <article class="carte-activites">
+            <div class="colonne-deux">
+                <article class="carte-petite">
                     <a href="#">
                         <img src="Images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo de Notre-Dame-de-la-Garde">
                         <h4>Notre-Dame-de-la-Garde</h4>
                     </a>
                 </article>
-                <article class="carte-activites">
+                <article class="carte-moyenne">
                     <a href="#">
                         <img src="Images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo du Parc Longchamp">
                         <h4>Parc Longchamp</h4>
