--- a/Booki1.html
+++ b/Booki1.html
@@ -88,8 +88,9 @@
        
         <section class="bloc-hebergements"> 
             <h1>Hébergements à Marseille</h1>
-            <div class="articles">  
-                <article class="carte-hebergements-marseille">
+            <div class="articles-hebergements">  
+                <div class="ligne-cartes">
+                    <article class="carte-hebergements-marseille">
                     <a href="#">
                         <img src="Images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo Auberge La cannebière">
                         <div class="carte-nom-marseille">
@@ -104,8 +105,8 @@
                             </div>
                         </div>
                     </a>
-                </article>
-                <article class="carte-hebergements-marseille">
+                    </article>
+                    <article class="carte-hebergements-marseille">
                     <a href="#">
                         <img src="Images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo Hôtel du port">
                         <div class="carte-nom-marseille">
@@ -120,8 +121,8 @@
                             </div>
                         </div>
                     </a>
-                </article>
-                <article class="carte-hebergements-marseille">
+                    </article>
+                    <article class="carte-hebergements-marseille">
                     <a href="#">
                         <img src="Images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo Hôtel Les mouettes">
                         <div class="carte-nom-marseille">
@@ -136,26 +137,28 @@
                             </div>
                         </div>
                     </a>
-                </article>
-                <article class="carte-hebergements-marseille">
-                    <a href="#">
-                        <img src="Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo Hôtel de la mer">
-                        <div class="carte-nom-marseille">
-                            <h3>Hôtel de la mer</h3>
-                            <p>Nuit à partir de 46<span>€</span></p>
-                            <div class="carte-star-rating"> 
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <span><i class="fa-solid fa-star fa-sm"></i><i class="fa-solid fa-star fa-sm"></i></span>
+                    </article>
+                </div>
+                <div class="ligne-cartes">
+                    <article class="carte-hebergements-marseille">
+                        <a href="#">
+                            <img src="Images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo Hôtel de la mer">
+                            <div class="carte-nom-marseille">
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de 46<span>€</span></p>
+                                <div class="carte-star-rating"> 
+                                    <i class="fa-solid fa-star fa-sm"></i>
+                                    <i class="fa-solid fa-star fa-sm"></i>
+                                    <i class="fa-solid fa-star fa-sm"></i>
+                                    <span><i class="fa-solid fa-star fa-sm"></i><i class="fa-solid fa-star fa-sm"></i></span>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </article>
-                <article class="carte-hebergements-marseille">
-                    <a href="#">
-                        <img src="Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo Auberge Le Panier">
-                        <div class="carte-nom-marseille">
+                        </a>
+                    </article>
+                    <article class="carte-hebergements-marseille">
+                        <a href="#">
+                            <img src="Images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo Auberge Le Panier">
+                            <div class="carte-nom-marseille">
                             <h3>Auberge Le Panier</h3>
                             <p>Nuit à partir de <span>23€</span></p>
                             <div class="carte-star-rating"> 
@@ -165,11 +168,11 @@
                                 <i class="fa-solid fa-star fa-sm"></i>
                                 <span><i class="fa-solid fa-star fa-sm"></i></span>
                             </div>
-                        </div>  
-                    </a>
-                </article>
-                <article class="carte-hebergements-marseille">
-                    <a href="#">
+                            </div>  
+                        </a>
+                    </article>
+                    <article class="carte-hebergements-marseille">
+                        <a href="#">
                         <img src="Images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo Hôtel chez Amina">
                         <div class="carte-nom-marseille">
                             <h3>Hôtel Chez Amina</h3>
@@ -183,7 +186,8 @@
                             </div>
                         </div>
                     </a>
-                </article>
+                    </article>
+                </div>
             </div> 
             <h2><a href="#">Afficher plus</a></h2>
         </section>
